--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -4,19 +4,59 @@
     "es2021": true,
     "jest": true
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:prettier/recommended"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:prettier/recommended",
+    "react-app",
+    "react-app/jest",
+    "prettier"
+  ],
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react"],
+  "plugins": [
+    "prettier"
+  ],
+  "globals": {
+    "browser": true,
+    "$": true,
+    "before": true,
+    "document": true
+  },
   "rules": {
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      },
+      {
+        "usePrettierrc": true
+      }
+    ],
     "react/react-in-jsx-scope": "off",
     "react/prop-types": 0,
     "no-unused-vars": "off",
     "react/jsx-key": 1,
     "react/no-unknown-property": 1,
-    "no-empty-pattern": "off"
+    "no-empty-pattern": "off",
+    "no-console": "off",
+    "import/no-extraneous-dependencies": "off",
+    "import/prefer-default-export": "off",
+    "no-confusing-arrow": "off",
+    "linebreak-style": "off",
+    "comma-dangle": [
+      "error",
+      {
+        "arrays": "always-multiline",
+        "objects": "always-multiline",
+        "imports": "always-multiline",
+        "exports": "always-multiline",
+        "functions": "ignore"
+      }
+    ],
+    "no-plusplus": "off"
   }
 }
