--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "i": "^0.3.7",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
+    "mongoose-paginate-v2": "^1.7.1",
     "nodemon": "^2.0.20",
     "npm": "^9.1.1"
   },
