--- a/server/.prettierrc
+++ b/server/.prettierrc
@@ -3,5 +3,7 @@
   "tabWidth": 2,
   "printWidth": 100,
   "singleQuote": true,
-  "jsxBracketSameLine": true
+  "jsxBracketSameLine": true,
+  "endOfLine": "auto",
+  "trailingComma": "es5"
 }
