--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,21 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "private": true,
+  "description": "full stack javascript project: Node, Mongo, Mongoose",
+  "keywords": [
+    "javascript",
+    "Node",
+    "Mongo",
+    "Mongoose"
+  ],
+  "author": "NC-C8-40",
+  "license": "ISC",
   "main": "server.js",
-  "type": "module",
   "engines": {
     "node": "16.x"
   },
+  "type": "module",
   "scripts": {
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
@@ -14,9 +23,6 @@
     "lint": "eslint ./",
     "lint:fix": "eslint ./ --fix"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "axios": "^1.1.3",
     "body-parser": "^1.20.1",
@@ -37,6 +43,8 @@
     "@types/express": "^4.17.14",
     "eslint": "^8.27.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.0"
   }
 }
