--- a/server/package.json
+++ b/server/package.json
@@ -30,7 +30,9 @@
     "mongoose": "^6.7.2",
     "mongoose-paginate-v2": "^1.7.1",
     "nodemon": "^2.0.20",
-    "npm": "^9.1.1"
+    "npm": "^9.1.1",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
