--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -19,16 +19,8 @@
       "error",
       "ignorePackages"
     ],
-    "prettier/prettier": [
-      "error",
-      {
-        "endOfLine": "auto"
-      },
-      {
-        "usePrettierrc": true
-      }
-    ],
     "linebreak-style": "off",
+    "no-underscore-dangle": 0,
     "object-curly-newline": [
       "error",
       {
@@ -38,12 +30,12 @@
         "ObjectPattern": {
           "multiline": true
         },
-        "ImportDeclaration": "never",
-        "ExportDeclaration": {
-          "multiline": true,
-          "minProperties": 3
-        }
+        "ImportDeclaration": {
+          "multiline": true
+        },
+        "ExportDeclaration": "never"
       }
-    ]
+    ],
+    "comma-dangle": "off"
   }
 }
