--- a/server/.github/workflows/server.yml
+++ b/server/.github/workflows/server.yml
@@ -2,9 +2,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [US1-B25-CI-con-github-actions]
+    branches: [development]
   pull_request:
-    branches: [US1-B25-CI-con-github-actions]
+    branches: [development]
 
 jobs:
   build:
